# clock

./: .gitignore  MIT-LICENSE.TXT  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  build_app.yaml
clock/: api.py  main.py
clock/app/: __init__.py
clock/app/gui/: __main__.py  main.py
clock/app/gui/assets/fonts/: 1001fonts-technology-eula.txt
clock/backend/: api.py
clock/backend/logger/: __init__.py  logger.py
clock/logger/: __init__.py  _custom_handler.py  logger.py
