[tool.poetry]
name = "clock"
version = "0.1.0"
description = ""
authors = ["Lucifer516-sudoer <harishvengatachalam02092005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.8"
arrow = "^1.3.0"
rich = "^13.7.1"
flet = "0.19.0"


[tool.poetry.group.installer.dependencies]
pyinstaller = "^6.8.0"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
